# leonidas

./: .gitignore  CODEOWNERS  NEXT_AMPLIFY.md  README.md  amplify.yml  package-lock.json
backend/: ARCHITECTURE.md  Dockerfile  README.md  TEST_BACKEND.md  backend_setup.py  chart_config.json  codebase.md  debug_response.py  dev.ipynb  fix_imports.py  main.py  plot.html  pyproject.toml  quick_container_test.py  requirements.txt  test-lambda.bat  test.html  test_lambda.py
backend/package/: __init__.py
backend/package/agents/: chart_builder.py  query_master.py
backend/package/core/: auth_middleware.py  aws_config.py  config.py  data_catalog.py  dependencies.py  interface.py  llm.py  repositories.py
backend/package/databases/: __init__.py
backend/package/databases/dynamodb/: __init__.py  file_repository.py  message_repository.py  project_repository.py  session_repository.py  user_repository.py
backend/package/llms/: __init__.py  base.py  bedrock.py  ollama.py
backend/package/prompt_hub/: __init__.py  chart_builder.md  chat_with_bro.md  chat_with_data.md  guide_question.md
backend/package/routers/auth/: database.py  endpoint.py  interface.py  router.py  services.py
backend/package/routers/chat/: __init__.py  database.py  endpoint.py  interface.py  router.py  services.py
backend/package/routers/files/: __init__.py  (+5 more)
backend/package/schemas/: file.py  message.py  project.py  session.py  user.py
backend/package/services/: auth_service.py  chat_service.py  file_service.py  project_service.py  session_service.py
backend/package/utils/: parse_string.py
(+159 files in other folders)
